// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetadataProperty simple component when type is custom type errors should render duplicated label error 1`] = `
<span
  className="validation-error"
>
  <Connect(Icon)
    icon="exclamation-triangle"
  />
   
  <Connect(Translate)>
    Duplicated label
  </Connect(Translate)>
</span>
`;

exports[`MetadataProperty simple component when type is custom type errors should render duplicated relation error 1`] = `
<span
  className="validation-error"
>
  <Connect(Icon)
    icon="exclamation-triangle"
  />
  <Connect(Translate)
    translationKey="relationship consistency warning"
  >
    Cannot use 'any entity or document' if another relationship of the same type is already with a specific entity.
  </Connect(Translate)>
</span>
`;
